fixup: Fix bottom shape color and vertical alignment

--- a/labware-library/src/components/labware-ui/styles.css
+++ b/labware-library/src/components/labware-ui/styles.css
@@ -122,7 +122,10 @@ button.load_name_button {
 }
 
 .well_bottom_icon {
+  align-self: flex-end;
   width: var(--spacing-6);
   margin-left: var(--spacing-3);
+  padding-bottom: calc(var(--spacing-1));
   overflow: visible;
+  color: var(--c-font-icon);
 }
